--- a/src/locales/id/m23.json
+++ b/src/locales/id/m23.json
@@ -5,6 +5,7 @@
     "tigerwild": "harimau wild",
     "dragon": "naga",
     "tiger": "harimau",
+    "wild": "wild",
     "superwild": "super wild",
     "tie": "seri",
     "big": "big",
@@ -13,7 +14,6 @@
     "even": "even",
     "red": "red",
     "black": "black",
-
     "wild bet": "wild bet",
     "dragon wild": "naga wild",
     "tiger wild": "harimau wild",
