--- a/src/locales/th/m23.json
+++ b/src/locales/th/m23.json
@@ -5,6 +5,7 @@
     "tigerwild": "tiger wild",
     "dragon": "dragon",
     "tiger": "tiger",
+    "wild": "wild",
     "superwild": "super wild",
     "tie": "tie",
     "big": "big",
@@ -13,7 +14,6 @@
     "even": "even",
     "red": "red",
     "black": "black",
-
     "wild bet": "Wild Bet",
     "dragon wild": "dragon wild",
     "tiger wild": "tiger wild",
